@@ -5,7 +5,7 @@ import net.mpvm.saeimmobilier.sql.Query.QueryElement;
 import net.mpvm.saeimmobilier.sql.Query.Queryable;
 import net.mpvm.saeimmobilier.sql.Query.SelectQueryElement;
 import net.mpvm.saeimmobilier.util.Unfinished;
-
+import net.mpvm.saeimmobilier.sql.Query.UpdateQueryElement;
 import java.sql.Date;
 import java.sql.SQLException;
 import java.util.ArrayList;
@@ -18,6 +18,7 @@ public abstract class Charges {
     private int idCharges;
     private float montant;
     private Date dateReleve;
+    private int idBail;
 
     // Constructeur
     private Charges(int idCharges, Date dateReleve) {
@@ -25,38 +26,21 @@ public abstract class Charges {
         this.dateReleve = dateReleve;
     }
 
-    public static List<Charges> getChargesFromBail(Bail bail) {
-        List<Charges> chargesList = new ArrayList<>();
-        try(SelectQueryElement selectQueryElement = new SelectQueryElement("SELECT * FROM Charges C JOIN Bail B ON C.IdBail = B.IdBail WHERE B.IdBail = ?")){
-            selectQueryElement.setArgs(Map.of(1, bail.getIdBail()));
-            selectQueryElement.execute();
-            List<Map<String, Object>> result = selectQueryElement.getResult();
-
-            for(Map<String, Object> row : result){
-                chargesList.add(switchTypeCharges(row));
-            }
-        }catch (QueryElement.QEltException qEltException) {
-            qEltException.getSqlException().printStackTrace();
-        }
-        return chargesList;
+    public Charges(Date dateReleve) {
+        this.dateReleve=dateReleve;
     }
 
-    public static Charges switchTypeCharges(Map<String, Object> row) throws ChargesException{
-        switch (TypeCharges.valueOf(row.get("TypeCharge").toString())){
-            case EAU -> new ChargeEau((int) row.get("IdCharges"),(Date) row.get("DateReleve"));
-            case ENTRETIEN -> new ChargeEntretien((int) row.get("IdCharges"),(Date) row.get("DateReleve"));
-            case ORDURES -> new ChargeOrdures((int) row.get("IdCharges"),(Date) row.get("DateReleve"));
-            case ELECTRICITE -> new ChargeElectricite((int) row.get("IdCharges"),(Date) row.get("DateReleve"));
-            case null, default -> throw new ChargesException("Erreur lors de la récupération des charges", new SQLException("Type de charge inconnu"));
-        }
-        throw new ChargesException("Erreur lors de la récupération des charges", new SQLException("Type de charge inconnu"));
+    public static List<Charges> getChargesFromBail(Bail bail) {
+        ArrayList<Charges> liste=new ArrayList<Charges>();
+        return liste;
     }
 
     // Getters et Setters
 
     @Unfinished
     public Bail getBail() {
-        return Bail.getBailFromCharges(this);
+        //TODO : query
+        return null;
     }
 
 
@@ -81,16 +65,11 @@ public abstract class Charges {
     public static double calculerChargesProprietaire() throws Exception {
         final String SELECT_QUERY = """
         SELECT
-            SUM(C.Montant) +
-            SUM(IFNULL(CEau.PartieFixe + CEau.PartieVariable, 0)) +
-            SUM(IFNULL(CEnt.Pourcentage * C.Montant / 100, 0)) +
-            SUM(IFNULL(COM.Pourcentage * C.Montant / 100, 0)) AS TotalCharges
+            SUM(C.Montant) AS Total
             FROM Charges C
-            LEFT JOIN ChargesEau CEau ON C.IdCharges = CEau.IdCharges
-            LEFT JOIN ChargesEntretien CEnt ON C.IdCharges = CEnt.IdCharges
-            LEFT JOIN ChargesOrduresMenageres COM ON C.IdCharges = COM.IdCharges
             JOIN Bail B ON C.IdBail = B.IdBail
-            WHERE B.Archive = FALSE""";
+            WHERE B.Archive = FALSE
+            """;
 
         double totalCharges = 0.0;
 
@@ -98,8 +77,8 @@ public abstract class Charges {
             selectQueryElement.execute();
             List<Map<String, Object>> result = selectQueryElement.getResult();
 
-            if (!result.isEmpty() && result.getFirst().get("TotalCharges") != null) {
-                totalCharges = (double) result.getFirst().get("TotalCharges");
+            if (!result.isEmpty() && result.get(0).get("TotalCharges") != null) {
+                totalCharges = (double) result.get(0).get("TotalCharges");
             }
         } catch (QueryElement.QEltException qEltException) {
             qEltException.getSqlException().printStackTrace();
@@ -107,6 +86,58 @@ public abstract class Charges {
         }
 
         return totalCharges;
+    }
+    public static List<Charges> getChargesDetails() throws ChargesException {
+        List<Charges> chargesDetails = new ArrayList<>();
+        final String SELECT_QUERY = """
+        SELECT IdCharges,DateCharge, Montant, TypeCharges
+        FROM Charges
+    """;
+
+        try (SelectQueryElement query = new SelectQueryElement(SELECT_QUERY)) {
+            query.execute();
+            List<Map<String, Object>> result = query.getResult();
+
+            // Parcourir chaque ligne de résultat et ajouter à la liste
+            for (Map<String, Object> row : result) {
+                switch((String) row.get("TypeCharges")){
+                    case "Eau":
+                        Charges ce=new ChargeEau((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
+                        ce.setMontant((float) row.get("Montant"));
+                        chargesDetails.add(ce);
+                        break;
+                    case "Provision sur charge":
+                        Charges pc=new ProvisionCharge((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
+                        pc.setMontant((float) row.get("Montant"));
+                        chargesDetails.add(pc);
+                        break;
+                    case "Ordures Ménagères":
+                        Charges om=new ChargeOrduresMenageres((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
+                        om.setMontant((float) row.get("Montant"));
+                        chargesDetails.add(om);
+                        break;
+                    case "Électricité":
+                        Charges cel=new ChargeElectricite((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
+                        cel.setMontant((float) row.get("Montant"));
+                        chargesDetails.add(cel);
+                        break;
+                    case "Entretien":
+                        Charges cen=new ChargeEntretien((int) row.get("IdCharges"),(Date) row.get("DateCharge")) ;
+                        cen.setMontant((float) row.get("Montant"));
+                        chargesDetails.add(cen);
+                        break;
+                }
+
+
+            }
+        } catch (QueryElement.QEltException qEltException) {
+            throw new ChargesException(
+                    "Erreur lors de la récupération des détails des charges.",
+                    qEltException.getSqlException()
+            );
+        }
+
+        return chargesDetails;
     }
 
     @Unfinished
@@ -125,7 +156,7 @@ public abstract class Charges {
             List<Map<String, Object>> result = selectQueryElement.getResult();
             for (Map<String, Object> row : result) {
                 //TODO : unfinished constructor de merde
-                chargesList.add(switchTypeCharges(row));
+//                chargesList.add(new Charges((int) row.get("IdCharges"),(Date) row.get("DateCharge")));
             }
         } catch (QueryElement.QEltException qEltException) {
             qEltException.getSqlException().printStackTrace();
@@ -147,28 +178,129 @@ public abstract class Charges {
         return Math.abs(montantVerse - montantDu) <= 0.01; // Tolérance d'arrondi
     }
 
+    public void save() throws ChargesException {
+        // Vérifier si la charge existe déjà dans la base de données (id différent de -1)
+        if (this.idCharges != -1) {
+            throw new ChargesException("Cette charge existe déjà dans la table.", null);
+        }
 
+        // Validation des données
+        if (this.montant < 0) {
+            throw new ChargesException("Le montant de la charge ne peut pas être négatif.", null);
+        }
+        if (this.dateReleve == null) {
+            throw new ChargesException("La date de la charge est obligatoire.", null);
+        }
+
+        // Préparer la requête SQL
+        String INSERT_QUERY = """
+        INSERT INTO Charges (Montant, DateCharge, TypeCharges, NouvelIndice, AncienIndice, PartieFixe, PartieVariable, IdBail)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+    """;
+
+        try (UpdateQueryElement query = new UpdateQueryElement(INSERT_QUERY, true)) {
+            // Déterminer les valeurs spécifiques selon le type de charge
+            Map<Integer, Object> args = switch (this) {
+                case ProvisionCharge pc -> Map.of(
+                        1, this.getMontant(),
+                        2, this.getDateReleve(),
+                        3, "Provision sur charge",
+                        4, null, // NouvelIndice
+                        5, null, // AncienIndice
+                        6, null, // PartieFixe
+                        7, null, // PartieVariable
+                        8, this.getIdBail()
+                );
+                case ChargeEau ce -> Map.of(
+                        1, this.getMontant(),
+                        2, this.getDateReleve(),
+                        3, "Eau",
+                        4, ce.getNouvelIndice(),
+                        5, ce.getAncienIndice(),
+                        6, ce.getPartieFixe(),
+                        7, ce.getPartieVariable(),
+                        8, this.getIdBail()
+                );
+                case ChargeEntretien ce -> Map.of(
+                        1, this.getMontant(),
+                        2, this.getDateReleve(),
+                        3, "Entretien",
+                        4, null, // NouvelIndice
+                        5, null, // AncienIndice
+                        6, null, // PartieFixe
+                        7, null, // PartieVariable
+                        8, this.getIdBail()
+                );
+                case ChargeOrduresMenageres com -> Map.of(
+                        1, this.getMontant(),
+                        2, this.getDateReleve(),
+                        3, "Ordures ménagères",
+                        4, null, // NouvelIndice
+                        5, null, // AncienIndice
+                        6, null, // PartieFixe
+                        7, null, // PartieVariable
+                        8, this.getIdBail()
+                );
+                case ChargeElectricite ce -> Map.of(
+                        1, this.getMontant(),
+                        2, this.getDateReleve(),
+                        3, "Électricité",
+                        4, null, // NouvelIndice
+                        5, null, // AncienIndice
+                        6, null, // PartieFixe
+                        7, null, // PartieVariable
+                        8, this.getIdBail()
+                );
+                default -> throw new ChargesException("Type de charge inconnu ou non supporté.", null);
+            };
+
+            // Exécuter la requête avec les arguments
+            query.setArgs(args).execute();
+
+            System.out.println("Charge ajoutée avec succès.");
+        } catch (QueryElement.QEltException qEltException) {
+            throw new ChargesException(
+                    "Erreur lors de l'ajout de la charge : " + qEltException.getSqlException().getMessage(),
+                    qEltException.getSqlException()
+            );
+        }
+    }
+
+    private int getIdBail() {
+        return this.idBail;
+    }
+
+
+    public void setIdBail(int idBail) {
+        this.idBail=idBail;
+    }
+    public static class ProvisionCharge extends Charges {
+        private float provision;
+        public ProvisionCharge(int idCharges, Date dateReleve) {
+            super(idCharges,dateReleve);
+        }
+        public ProvisionCharge(Date dateReleve) {
+            this(-1,dateReleve);
+        }
+        public void setProvision(float provision){
+            this.provision=provision;
+        }
+        public float getProvision(){
+            return provision;
+        }
+
+
+    }
     public static class ChargeOrduresMenageres extends Charges {
-        private int idChargesOrduresMenageres;
 
-        private ChargeOrduresMenageres(int idCharges,Date dateReleve) {
+        public ChargeOrduresMenageres(int idCharges, Date dateReleve) {
             super(idCharges,dateReleve);
         }
         public ChargeOrduresMenageres(Date dateReleve) {
             this(-1,dateReleve);
         }
 
-        // Getters et Setters
-
-        public int getIdChargesOrduresMenageres() {
-            return idChargesOrduresMenageres;
-        }
-
-        public void setIdChargesOrduresMenageres(int idChargesOrduresMenageres) {
-            this.idChargesOrduresMenageres = idChargesOrduresMenageres;
-        }
     }
-
 
     public static class ChargeEntretien extends Charges {
 
@@ -182,7 +314,6 @@ public abstract class Charges {
 
     }
 
-
     public static class ChargeElectricite extends Charges {
 
         private ChargeElectricite(int idCharges,Date dateReleve) {
@@ -195,27 +326,47 @@ public abstract class Charges {
 
     }
 
-    public static class ChargeEau extends Charges{
+    public static class ChargeEau extends Charges {
         private int NouvelIndice;
+        private int AncienIndice; // Ajouté pour le calcul
         private float PartieFixe;
         private float PartieVariable;
-        private int AncienIndice;
 
-        private ChargeEau(int idCharges,Date dateReleve) {
-            super(idCharges,dateReleve);
+        // Constructeur privé
+        private ChargeEau(int idCharges, Date dateReleve) {
+            super(idCharges, dateReleve);
         }
-        public ChargeEau(Date DateReleve) {
 
-            this(-1,DateReleve);
+        // Constructeur public
+        public ChargeEau(Date dateReleve) {
+            this(-1, dateReleve);
         }
+
+        // Calculer le montant à partir des indices et des parties fixe/variable
+        public double calculerMontant() {
+            if (NouvelIndice < AncienIndice) {
+                throw new IllegalArgumentException("Le nouvel indice ne peut pas être inférieur à l'ancien indice.");
+            }
+
+            // Calcul du volume consommé
+            int volumeConsommé = NouvelIndice - AncienIndice;
+
+            // Calcul du montant
+            float montant = PartieFixe + (volumeConsommé * PartieVariable);
+
+            // Appliquer le montant calculé à l'objet
+            this.setMontant(montant);
+            return 0;
+        }
+
+        // Getters et setters
         public int getNouvelIndice() {
-
             return NouvelIndice;
         }
 
         public void setNouvelIndice(int NouvelIndice) throws IllegalArgumentException {
-            if (NouvelIndice < AncienIndice) {
-                throw new IllegalArgumentException("Le nouvel indice ne peut pas être inférieur à l'ancien.");
+            if (NouvelIndice < 0) {
+                throw new IllegalArgumentException("L'indice doit être un entier positif.");
             }
             this.NouvelIndice = NouvelIndice;
         }
@@ -224,7 +375,10 @@ public abstract class Charges {
             return AncienIndice;
         }
 
-        public void setAncienIndice(int AncienIndice) {
+        public void setAncienIndice(int AncienIndice) throws IllegalArgumentException {
+            if (AncienIndice < 0) {
+                throw new IllegalArgumentException("L'indice doit être un entier positif.");
+            }
             this.AncienIndice = AncienIndice;
         }
 
@@ -233,35 +387,24 @@ public abstract class Charges {
         }
 
         public void setPartieFixe(float PartieFixe) {
-            this.PartieFixe = PartieFixe;
-        }
-        public void mettreAJourIndice(int NouvelIndice) throws IllegalArgumentException {
-            if (NouvelIndice < AncienIndice) {
-                throw new IllegalArgumentException("Le nouvel indice ne peut pas être inférieur à l'ancien.");
+            if (PartieFixe < 0) {
+                throw new IllegalArgumentException("La partie fixe ne peut pas être négative.");
             }
-            this.AncienIndice = this.NouvelIndice;
-            this.NouvelIndice = NouvelIndice;
+            this.PartieFixe = PartieFixe;
         }
 
         public float getPartieVariable() {
             return PartieVariable;
         }
+
         public void setPartieVariable(float PartieVariable) {
+            if (PartieVariable < 0) {
+                throw new IllegalArgumentException("La partie variable ne peut pas être négative.");
+            }
             this.PartieVariable = PartieVariable;
         }
     }
 
-    public static class ChargeOrdures extends Charges{
-
-        private ChargeOrdures(int idCharges, Date dateReleve) {
-            super(idCharges, dateReleve);
-        }
-    }
-
-    private enum TypeCharges {
-        EAU,ENTRETIEN,ORDURES, ELECTRICITE;
-
-    }
 
     public static class ChargesException extends Queryable.QbleException {
         public ChargesException(String message, SQLException sqlException) {
